Add git aliases
aliases for
`git diff`
`git diff --staged`
`git status`

--- a/.gitconfig
+++ b/.gitconfig
@@ -33,6 +33,13 @@
 	sttus = status
 	staut = status
 	statua = status
+	s = status
+	d = diff
+	di = diff
+	dif = diff
+	ds = diff --staged
+	dis = diff --staged
+	diffst = diff --staged
 [core]
 	excludesfile = ~/.config/git/ignore
 	editor = /usr/local/bin/vim
