Fix stack.yaml email

--- a/.stack/stack.yaml
+++ b/.stack/stack.yaml
@@ -1,5 +1,5 @@
 templates:
   params:
-    author-email: amar47shah@gmail
+    author-email: amar47shah@gmail.com
     author-name: Amar Shah
     github-username: amar47shah
